--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
-    <title>Vite + Preact</title>
+    <title>Midjourney and AI Stuff</title>
   </head>
   <body>
     <div id="app"></div>
